# weather-trader

./: .gitignore  LICENSE  README.md  app_new.py  launch.bat  launch.command  launch.ps1  launch.sh  pyproject.toml
.github/workflows/: build-release.yml
docs/: distribution.md
weather_engine/: config.py  db.py  main.py  scheduler.py
weather_engine/analysis/: accuracy.py  analog.py  anomaly.py  betting_signal.py  bma.py  calibration.py  climate_normals.py  confidence.py  convergence.py  correlation.py  cross_reference.py  crps.py  descriptive.py  drift.py  ensemble_analysis.py  extreme_value.py  feedback_report.py  line_tracker.py  model_tracker.py  portfolio.py  probability.py  recalibration.py  regression.py  scoring.py  smoothing.py  spread_tracker.py  timeseries.py  verification.py  weight_learner.py
weather_engine/api/: error_handlers.py  routes_ai.py  routes_analysis.py  routes_forecast.py  routes_health.py  routes_market.py
weather_engine/backtesting/: engine.py  metrics.py
weather_engine/collectors/: air_quality.py  base.py  climate.py  deterministic.py  ensemble.py  flood.py  forecast.py  historical.py  marine.py  seasonal.py  teleconnection.py
weather_engine/market_bridge/: ev_calculator.py  parser.py  pnl_resolver.py  predictor.py
weather_engine/models/: analysis.py  location.py  market.py  weather.py
weather_engine/notifications/: formatter.py  telegram.py  telegram_bot.py
weather_engine/resilience/: circuit_breaker.py  staleness.py
weather_trader/: __init__.py  api_client.py  app_state.py  backend_bootstrap.py  constants.py  logging_config.py  main_layout.py
weather_trader/logic/: __init__.py  pnl_tracker.py  risk_manager.py
weather_trader/sections/: __init__.py  dashboard.py  guida.py  mappa.py  mercati.py  previsioni.py  sistema.py  storico.py
weather_trader/widgets/: __init__.py  charts.py  confidence.py  distribution.py  factory.py  pnl_widgets.py  weather_map.py
