[project]
name = "weather-trader"
version = "0.1.0"
description = "Weather Trader — Forecast intelligence meets prediction market dashboard"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "mengo1234" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]
dependencies = [
    "flet>=0.25",
    "flet-map>=0.80.5",
    "httpx>=0.28",
]

[project.urls]
Homepage = "https://github.com/mengo1234/weather-trader"
Repository = "https://github.com/mengo1234/weather-trader"
Issues = "https://github.com/mengo1234/weather-trader/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["weather_trader"]

[tool.flet]
app = "app_new.py"
icon = "icon-256.png"
name = "WeatherTrader"
