[project]
name = "weather-trader"
version = "0.1.0"
description = "Weather Trader — Forecast intelligence meets prediction market dashboard"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "mengo1234" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]
dependencies = [
    # Desktop UI
    "flet>=0.25",
    "flet-map>=0.80.5",
    "httpx>=0.28",
    # Backend (weather-engine, embedded)
    "openmeteo-requests>=1.3",
    "requests-cache>=1.2",
    "retry-requests>=2.0",
    "pandas>=2.2",
    "numpy>=2.0",
    "scipy>=1.14",
    "scikit-learn>=1.5",
    "statsmodels>=0.14",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "duckdb>=1.1",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "apscheduler>=3.10",
    "jinja2>=3.1",
]

[project.urls]
Homepage = "https://github.com/mengo1234/weather-trader"
Repository = "https://github.com/mengo1234/weather-trader"
Issues = "https://github.com/mengo1234/weather-trader/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["weather_trader", "weather_engine"]

[tool.flet]
app = "app_new.py"
icon = "icon-256.png"
name = "WeatherTrader"
